CAD-1193 CAD-1127 sonar issue fixes